--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,9 @@ jobs:
       run: chmod +x ./cli/gradlew
 
     - name: Move to project directory
-      run: cd cli
+      run: |
+        cd cli
+        ls
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
