--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,4 +32,4 @@ jobs:
 
     - name: Run tests
       working-directory: ./cli
-      run: ./gradlew test
+      run: ./gradlew test --info --stacktrace
